v1.6.64/_sources/index.rst.txt
.. h2oGPTe Python client documentation master file, created by
   sphinx-quickstart

h2oGPTe Python Client
===============================
``h2ogpte`` is the Python client library for H2O.ai's `h2oGPTe <https://h2o.ai/platform/enterprise-h2ogpt/>`__,
a RAG (Retrieval-Augmented Generation) based platform built on top of open-source software components such as h2oGPT,
hnswlib, Torch, Transformers, Golang, Python, k8s, Docker, PyMuPDF, DocTR, and many more.

``h2oGPTe`` is designed to help organizations improve their business using **generative AI**. 
It focuses on scaling as your organization expands the number of use cases, users, 
and documents, and has the goal of being your one stop for integrating any model or 
LLM functionality into your business.

Main features:

- Contextualize chat with your own data using RAG (Retrieval-Augmented Generation).
- Scalable backend and frontend, multi-user, high throughput.
- Fully containerized with Kubernetes.
- Multi-modal support for text, images, and audio.
- Highly customizable prompting for:
    - talk to LLM
    - talk to document
    - talk to collection of documents
    - talk to every page of a collection (Map/Reduce), summary, extraction
- LLM agnostic - choose the model you need for your use case.

.. toctree::
   :maxdepth: 2
   :caption: Installation

   installation

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   getting_started
   async_api


.. toctree::
   :maxdepth: 2
   :caption: Tutorials

   tutorials/tutorial1/tutorial1
   tutorials/tutorial2/tutorial2
   tutorials/tutorial3/tutorial3
   tutorials/tutorial4/tutorial4


.. toctree::
   :maxdepth: 2
   :caption: Examples

   examples/chats/index
   examples/collections/index
   examples/documents/index
   examples/llms/index
   examples/users/index
   examples/jobs/index
   examples/prompts/index

.. toctree::
   :maxdepth: 10
   :caption: Python API

   python_api

.. toctree::
    :maxdepth: 2
    :caption: Python for REST API

    rest

.. only:: html

   .. toctree::
      :maxdepth: 1
      :caption: Third-Party Notices

      docs-licenses/licenses

.. toctree::
   :maxdepth: 2
   :caption: Release Notes

   changelog

Indices and Tables
==================

* :ref:`modindex`
* :ref:`genindex`
